Closed Bug 889053 Opened 12 years ago Closed 12 years ago

nsCycleCollectorParams::mDoNothing does nothing

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: mccr8, Assigned: mccr8)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

mParams.mDoNothing is always false, until the very end of Shutdown(). But the only place we call Shutdown() is in nsCycleCollector_shutdown, and we delete the collector right after that, so it doesn't make any sense to have this.
Assignee: nobody → continuation
Summary: Remove mDoNothing from the cycle collector → nsCycleCollectorParams::mDoNothing does nothing
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: