Bug 889053 - Remove nsCycleCollectorParams::mDoNothing which does nothing. r=khuey